--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -20,9 +20,14 @@ h1{
     margin-right: 4.5%;
     margin-top: 2.5%;
     padding:0;
-    font-size: 50px;
+    font-size: 29px;
     font-family: 'Ubuntu', "Open Sans";
     font-weight: 100;
+}
+#p01{
+    padding:2px;
+    margin:10px;
+    font-size: 17px;
 }
 #i01{
     height: 150px;
@@ -35,20 +40,45 @@ h1{
 }
 #h02{
     color: white;
-    margin-left: 42%;
+    margin-left: 40%;
+    font-size: 30px;
+}
+#h03{
+    color: white;
+    margin-left: 30%;
+    font-size: 30px;
+}
+#u01{
+    margin-left:3%;
+    padding: 10px;
 }
 #d02{
     color: white;
     width: 50%;
-    height:100%;
+    height:60%;
     border: 4px solid;
     border-color: #fc1313;
     background-color: #8f8f8f;
     padding:1px;
-    margin:0;
+    margin:5px;
+    margin-left: 3%;
     display: block;
     border-radius: 16px;
-
+    float: left;
+}
+#d03{
+    color: white;
+    width: 40%;
+    height:50%;
+    float: right;
+    border: 4px solid;
+    border-color: #fc1313;
+    background-color: #8f8f8f;
+    padding:1px;
+    margin:5px;
+    margin-right: 3%;
+    display: block;
+    border-radius: 16px;
 }
 ul {
     top:0;
