--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -18,9 +18,9 @@ h1{
     color:rgb(253, 57, 57);
     float: right; 
     margin-right: 4.5%;
-    margin-top: 4.5%;
+    margin-top: 1%;
     padding:0;
-    font-size: 29px;
+    font-size: 3.5vw;
     font-family: 'Ubuntu', "Open Sans";
     font-weight: 100;
 }
