--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -20,7 +20,7 @@ h1{
     margin-right: 4.5%;
     margin-top: 1%;
     padding:0;
-    font-size: 3.5vw;
+    font-size: 2.22vw;
     font-family: 'Ubuntu', "Open Sans";
     font-weight: 100;
 }
@@ -28,6 +28,7 @@ h1{
     padding:2px;
     margin:10px;
     font-size: 17px;
+    overflow: hidden;
 }
 #i01{
     width: 22%;
