--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -18,14 +18,14 @@ h1{
     color:rgb(253, 57, 57);
     float: right; 
     margin-right: 4.5%;
-    margin-top: 2.5%;
+    margin-top: 1.0%;
     padding:0;
-    font-size: 50px;
+    font-size: 3.5vw;
     font-family: 'Ubuntu', "Open Sans";
     font-weight: 100;
 }
 #i01{
-    height: 150px;
+    width: 22%;
 }
 #d01{
     background-color: rgb(247, 245, 245);
