--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -20,12 +20,12 @@ h1{
     margin-right: 4.5%;
     margin-top: 2.5%;
     padding:0;
-    font-size: 50px;
+    font-size: 300%;
     font-family: 'Ubuntu', "Open Sans";
     font-weight: 100;
 }
 #i01{
-    height: 150px;
+    height: 15%;
 }
 #d01{
     background-color: rgb(247, 245, 245);
