--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -9,11 +9,11 @@ body{
     color:rgb(253, 57, 57);
     float: right; 
     margin-right: 4.5%;
-    margin-top: 1.2%;
+    margin-top: 1%;
     padding:0;
-    font-size: 2vw;
+    font-size: 2.22vw;
     font-family: 'Ubuntu', "Open Sans";
-    font-weight: 100;
+    font-weight: 900;
 }
 #p01{
     background-color:#717171;
@@ -23,18 +23,23 @@ body{
     overflow: hidden;
 }
 #i01{
-    height: 5vw;
+    width: 22%;
 }
 #d01{
+    background-image: url("images/white.jpg");
     background-color: rgb(247, 245, 245);
     margin: 0;
     padding:0;
     display: block;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
 #h02{
     background-color: #fc1313;
     padding:15px;
-    width:8.5vw;    
+    width:8vw;    
     border-radius: 30px;
     margin-bottom: 10px;    
     color: white;
@@ -44,7 +49,7 @@ body{
 #h03{
     background-color: #fc1313;
     padding:15px;
-    width: 16.3vw;    
+    width: 15vw;    
     border-radius: 35px;
     color: white;
     margin-left: 30%;
@@ -64,6 +69,7 @@ body{
     background-color: #494949;
     color: white;
     text-align: center;
+    box-shadow: 0px 0px 14px 5px #2c2929;
 }
 .footer1{
     clear: both;
@@ -93,6 +99,7 @@ body{
     border-radius: 16px;
     float: left;
     margin-bottom: 4%;
+    box-shadow: 4px 8px 14px 5px #2c2929;
 }
 #li1{
     padding:5px;
@@ -113,19 +120,21 @@ body{
     display: block;
     border-radius: 16px;
     margin-bottom: 4%;
+    box-shadow: 4px 8px 14px 5px #2c2929;
 }
 #d04{
     color: white;
     width: 60%;
     height:100%;
     border: 4px solid;
-    border-color: #fc1313;
+    border-color: #f73535;
     background-color: #8f8f8f;
     padding:1px;
     margin:20 auto;
     border-radius: 16px;
+    box-shadow: 4px 8px 14px 5px #2c2929;
 }
-ul {
+#ul3 {
     top:0;
     list-style-type: none;
     margin: 0;
@@ -134,11 +143,13 @@ ul {
     background-color: #807f7f;
     position: sticky;
     z-index: 99;
+    box-shadow: 0px 1px 14px #2c2929;
 }
 #ul2{
     margin-left:3%;
     padding: 10px;
     background-color: #8f8f8f;
+    box-shadow: 0px 0px 0px;
 } 
 #ul1{
     list-style-type: none;
@@ -179,14 +190,15 @@ li a:hover {
     transition: 0.3s;
 }
 .active {
-    background-color:rgb(253, 31, 31);
+    background-color:rgb(240, 27, 27);
 }
   
 .slideshow-container {
-    max-width: 1300px;
+    max-width: 100vw;
     max-height: 500px;
     position: relative;
     margin: auto;
+    box-shadow: 0px 4px 15px 5px #2c2929;
 }
 .mySlides {
     display: none;
@@ -221,7 +233,9 @@ li a:hover {
 .text {
     border-radius: 16px;
     display: inline-block;
-    background-color: rgb(20, 20, 20);
+    background-color: #fc1313;
+    border: 3px solid;
+    border-color: #2c2929;
     color: #f3f3f3;
     font-size: 15px;
     padding: 8px 12px;
@@ -269,6 +283,14 @@ table{
     border-color: rgb(255, 49, 49);
     margin-bottom: 20px; 
 }
+.bg-image{
+    background-image: url("images/red-saturated.jpg");
+    height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 tr{
     color:white;
 }
@@ -277,7 +299,7 @@ input[type=text], input[type=password], input[type=date]{
     height: 40px;
     padding: 15px;
     margin: 5px 0 22px 0;
-    border-radius: 8px;
+    border-radius: 16px;
     display: inline-block;
     border: none;
     background: #f1f1f1;
@@ -315,7 +337,7 @@ label{
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    border-radius: 8px;
+    border-radius: 16px;
     width: 100%;
     transition: 0.4s;
     opacity: 0.9;
