--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -3,6 +3,8 @@ body{
     margin:0; 
     padding:0;
     font-family: 'Ubuntu', "Open Sans";
+    zoom: 80%;
+    max-zoom: 80%;
 }
 
 #h01{
@@ -126,7 +128,7 @@ body{
     color: white;
     width: 60%;
     height:100%;
-    border: 4px solid;
+    border: 7px solid;
     border-color: #f73535;
     background-color: #8f8f8f;
     padding:1px;
