--- a/Web_Styling.css
+++ b/Web_Styling.css
@@ -3,8 +3,7 @@ body{
     margin:0; 
     padding:0;
     font-family: 'Ubuntu', "Open Sans";
-    zoom: 80%;
-    max-zoom: 80%;
+    zoom: 100%;
 }
 
 #h01{
@@ -21,7 +20,7 @@ body{
     background-color:#717171;
     padding:10px;
     margin:10px;
-    font-size: 19px;
+    font-size: 1.4vw;
     overflow: hidden;
 }
 #i01{
@@ -41,21 +40,21 @@ body{
 #h02{
     background-color: #fc1313;
     padding:15px;
-    width:8vw;    
+    width:9vw;    
     border-radius: 30px;
     margin-bottom: 10px;    
     color: white;
     margin-left: 40%;
-    font-size: 30px;
+    font-size: 2vw;
 }
 #h03{
     background-color: #fc1313;
     padding:15px;
-    width: 15vw;    
+    width: 17.4vw;    
     border-radius: 35px;
     color: white;
     margin-left: 30%;
-    font-size: 30px;
+    font-size: 2vw;
 }
 .footer{
     clear: both;
@@ -89,8 +88,8 @@ body{
 }
 #d02{
     color: white;
-    width: 50%;
-    height:60%;
+    width: 50vw;
+    height:35vw;
     border: 4px solid;
     border-color: #fc1313;
     background-color: #8f8f8f;
@@ -106,12 +105,12 @@ body{
 #li1{
     padding:5px;
     background-color: #717171;
-    font-size: 20px;
+    font-size: 1.5vw;
 }
 #d03{
     color: white;
-    width: 40%;
-    height:60%;
+    width: 40vw;
+    height:30vw;
     float: right;
     border: 4px solid;
     border-color: #fc1313;
@@ -346,4 +345,9 @@ label{
 }
 .registerbtn:hover{
     background-color: rgb(248, 6, 6);
+}
+.footer-img{
+    float:left; 
+    height: 9vw;
+    margin-left: 0.2vw;
 }
