--- a/html/Web_Styling.css
+++ b/html/Web_Styling.css
@@ -1,62 +1,68 @@
-body{
-    background-color: rgb(66, 66, 66); 
-    margin:0; 
-    padding:0;
+body {
+    background-color: rgb(66, 66, 66);
+    margin: 0;
+    padding: 0;
     font-family: 'Ubuntu', "Open Sans";
     zoom: 100%;
 }
 
-#h01{
-    color:rgb(253, 57, 57);
-    float: right; 
+#h01 {
+    color: rgb(253, 57, 57);
+    float: right;
     margin-right: 4.5%;
     margin-top: 1%;
-    padding:0;
+    padding: 0;
     font-size: 2.22vw;
     font-family: 'Ubuntu', "Open Sans";
     font-weight: 900;
 }
-#p01{
-    background-color:#717171;
-    padding:10px;
-    margin:10px;
+
+#p01 {
+    background-color: #717171;
+    padding: 10px;
+    margin: 10px;
     font-size: 1.4vw;
     overflow: hidden;
 }
-#i01{
+
+#i01 {
     width: 22%;
 }
-#d01{
-    background-image: url("images/white.jpg");
+
+#d01 {
+    background-image: url("../images/white.jpg");
     background-color: rgb(247, 245, 245);
     margin: 0;
-    padding:0;
+    padding: 0;
     display: block;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
-#h02{
+
+#h02 {
     background-color: #fc1313;
-    padding:15px;
-    width:9vw;    
+    padding: 15px;
+    width: 9vw;
     border-radius: 30px;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
     color: white;
     margin-left: 40%;
     font-size: 2vw;
 }
-#h03{
+
+#h03 {
     background-color: #fc1313;
-    padding:15px;
-    width: 17.4vw;    
+    padding: 15px;
+    width: 17.4vw;
     border-radius: 35px;
     color: white;
     margin-left: 30%;
     font-size: 2vw;
 }
-.footer{
+
+.footer {
     clear: both;
     position: static;
     left: 0;
@@ -72,7 +78,8 @@ body{
     text-align: center;
     box-shadow: 0px 0px 14px 5px #2c2929;
 }
-.footer1{
+
+.footer1 {
     clear: both;
     position: static;
     left: 0;
@@ -86,15 +93,16 @@ body{
     color: white;
     text-align: center;
 }
-#d02{
+
+#d02 {
     color: white;
     width: 50vw;
-    height:35vw;
+    height: 35vw;
     border: 4px solid;
     border-color: #fc1313;
     background-color: #8f8f8f;
-    padding:1px;
-    margin:5px;
+    padding: 1px;
+    margin: 5px;
     margin-left: 3%;
     display: block;
     border-radius: 16px;
@@ -102,75 +110,74 @@ body{
     margin-bottom: 4%;
     box-shadow: 4px 8px 14px 5px #2c2929;
 }
-#li1{
-    padding:5px;
+
+#li1 {
+    padding: 5px;
     background-color: #717171;
     font-size: 1.5vw;
 }
-#d03{
+
+#d03 {
     color: white;
     width: 40vw;
-    height:30vw;
+    height: 30vw;
     float: right;
     border: 4px solid;
     border-color: #fc1313;
     background-color: #8f8f8f;
-    padding:1px;
-    margin:5px;
+    padding: 1px;
+    margin: 5px;
     margin-right: 3%;
     display: block;
     border-radius: 16px;
     margin-bottom: 4%;
     box-shadow: 4px 8px 14px 5px #2c2929;
 }
-#d04{
+
+#d04 {
     color: white;
     width: 60%;
-    height:100%;
     border: 7px solid;
     border-color: #f73535;
     background-color: #8f8f8f;
-    padding:1px;
-    margin:20 auto;
+    padding: 1px;
+    margin: 20 auto;
     border-radius: 16px;
     box-shadow: 4px 8px 14px 5px #2c2929;
 }
-#d05{
+
+#d05 {
     color: white;
     width: 60%;
-    height:100%;
     border: 4px solid;
     border-color: #f73535;
     background-color: #8f8f8f;
-    padding:1px;
-    margin:20 auto;
+    padding: 1px;
+    margin: 20 auto;
     border-radius: 16px;
     box-shadow: 4px 8px 14px 5px #2c2929;
 }
+
 .custom-select {
-    float-right;
-    border: 1px solid #ccc;
-    width: 120px;
-    border-radius: 3px;
+    width: 13vw;
+    border-radius: 16px;
     overflow: hidden;
-    background: #fafafa url("img/icon-select.png") no-repeat 90% 50%;
+    background: #f1f1f1;
+    box-shadow: 0px 0px 30px -8px #2c2929;
 }
 
-    .custom-select select {
-        padding: 5px 8px;
-        width: 130%;
-        border: none;
-        box-shadow: none;
-        background: transparent;
-        background-image: none;
-        -webkit-appearance: none;
-    }
+.custom-select select {
+    padding: 5px 8px;
+    width: 130%;
+    box-shadow: 0px 0px 30px -8px #2c2929;
+}
 
-        .custom-select select:focus {
-            outline: none;
-        }
+.custom-select select:focus {
+    outline: none;
+}
+
 #ul3 {
-    top:0;
+    top: 0;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -180,35 +187,40 @@ body{
     z-index: 99;
     box-shadow: 0px 1px 14px -2px #2c2929;
 }
-#ul2{
-    margin-left:3%;
+
+#ul2 {
+    margin-left: 3%;
     padding: 10px;
     background-color: #8f8f8f;
     box-shadow: 0px 0px 0px;
-} 
-#ul1{
+}
+
+#ul1 {
     list-style-type: none;
     margin: 0 auto;
     overflow: hidden;
-    background-color:#494949;
-}
-
-.footer-elements{
     background-color: #494949;
 }
-.footer-elements li{
+
+.footer-elements {
+    background-color: #494949;
+}
+
+.footer-elements li {
     width: 10%;
-    height: 30px;  
-    float:none;
+    height: 30px;
+    float: none;
     margin-left: 42%;
     text-align: center;
 }
-.footer-elements li a:hover{
+
+.footer-elements li a:hover {
     background-color: rgb(255, 0, 0);
     text-decoration: underline;
     transition: 0.7s;
 }
-li{
+
+li {
     float: left;
 }
 
@@ -219,15 +231,16 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
 }
-  
+
 li a:hover {
     background-color: rgb(97, 97, 97);
     transition: 0.3s;
 }
+
 .active {
-    background-color:rgb(240, 27, 27);
+    background-color: rgb(240, 27, 27);
 }
-  
+
 .slideshow-container {
     max-width: 100vw;
     max-height: 500px;
@@ -235,12 +248,15 @@ li a:hover {
     margin: auto;
     box-shadow: 0px 4px 15px 5px #2c2929;
 }
+
 .mySlides {
     display: none;
 }
-#slide1{
-    display:block
-}  
+
+#slide1 {
+    display: block
+}
+
 .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -255,16 +271,16 @@ li a:hover {
     border-radius: 0 3px 3px 0;
     user-select: none;
 }
-  
- 
+
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
+
 .prev:hover, .next:hover {
     background-color: rgba(255, 0, 0, 0.8);
 }
-  
+
 .text {
     border-radius: 16px;
     display: inline-block;
@@ -291,45 +307,58 @@ li a:hover {
     display: inline-block;
     transition: background-color 0.6s ease;
 }
-  
+
 .dot:hover {
     background-color: #717171;
 }
+
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
 }
-  
+
 @-webkit-keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
-  
+
 @keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
+    from {
+        opacity: .4
+    }
+    to {
+        opacity: 1
+    }
 }
-table{
-    border:10px;
+
+table {
+    border: 10px;
     border-collapse: collapse;
     padding: 4px;
     border-color: rgb(255, 49, 49);
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
-.bg-image{
-    background-image: url("images/red-saturated.jpg");
-    height: 100%; 
+
+.bg-image {
+    background-image: url("../images/red-saturated.jpg");
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
-tr{
-    color:white;
+
+tr {
+    color: white;
 }
-input[type=text], input[type=password], input[type=date]{
+
+input[type=text], input[type=password], input[type=date] {
     width: 100%;
     height: 40px;
     padding: 15px;
@@ -345,31 +374,39 @@ input[type=text]:focus, input[type=password]:focus, input[type=date]:focus {
     background-color: #ddd;
     outline: none;
 }
-td{
+
+td {
     text-align: center;
 }
-#td2{
+
+#td2 {
     font-size: 1.2vw;
     padding-bottom: 1vw;
     padding-right: 1vw;
 }
+
 hr {
     border: 1px solid #f1f1f1;
     margin-bottom: 25px;
 }
-label{
-    color:white;
+
+label {
+    color: white;
     font-size: 18px;
 }
-#cp1{
+
+#cp1 {
     margin-left: 8%;
 }
-#fit1{
+
+#fit1 {
     font-size: 12px;
 }
-#td1{
+
+#td1 {
     margin-left: 10%;
 }
+
 .registerbtn {
     background-color: rgb(255, 49, 49);
     color: white;
@@ -382,11 +419,45 @@ label{
     transition: 0.4s;
     opacity: 0.9;
 }
-.registerbtn:hover{
+
+.registerbtn2{
+    background-color: rgb(255, 49, 49);
+    color: white;
+    padding: 16px 20px;
+    margin: 8px 0;
+    margin-left: 15vw;
+    border: none;
+    cursor: pointer;
+    border-radius: 16px;
+    width: 50%;
+    transition: 0.4s;
+    opacity: 0.9;
+}
+
+.registerbtn:hover {
     background-color: rgb(248, 6, 6);
 }
-.footer-img{
-    float:left; 
+
+.registerbtn2:hover {
+    background-color: rgb(248, 6, 6);
+}
+
+.footer-img {
+    float: left;
     height: 9vw;
     margin-left: 0.2vw;
+}
+
+.display-table{
+    border:10px;
+    border-collapse: collapse;
+    padding: 4px;
+    border-color: rgb(255, 49, 49);
+    margin-bottom: 20px; 
+}
+th{
+    background-color: rgb(255, 49, 49);
+    color: white;
+    text-align: left;
+    padding: 8px;
 }
