--- a/html/Web_Styling.css
+++ b/html/Web_Styling.css
@@ -461,3 +461,92 @@ th{
     text-align: left;
     padding: 8px;
 }
+#d06{
+    color: white;
+    width: 60%;
+    height: auto;
+    border: 4px solid;
+    border-color: #f73535;
+    background-color: #8f8f8f;
+    padding: 1px;
+    margin: 20 auto;
+    border-radius: 16px;
+    box-shadow: 4px 8px 14px 5px #2c2929;
+    position: relative;
+}
+#div-1{
+    color: white;
+    width: 28vw;
+    height: auto;
+    border: 7px solid;
+    border-color: #f73535;
+    background-color: #8f8f8f;
+    padding: 1px;
+    float:left;
+    margin-left: 19vw;
+    border-radius: 16px;
+    box-shadow: 4px 8px 14px 5px #2c2929;
+}
+#div-2{
+    color: white;
+    width: 28vw;
+    height: auto;
+    border: 7px solid;
+    border-color: #f73535;
+    background-color: #8f8f8f;
+    padding: 1px;
+    float:right;
+    margin-right: 19vw;
+    border-radius: 16px;
+    box-shadow: 4px 8px 14px 5px #2c2929;
+}
+#div-3{
+    clear:both;
+    color: white;
+    width: 60vw;
+    height: auto;
+    border: 7px solid;
+    border-color: #f73535;
+    background-color: #8f8f8f;
+    padding: 1px;
+    float:right;
+    margin-top: 1vw;
+    margin-right: 19vw;
+    margin-bottom: 1vw;
+    border-radius: 16px;
+    box-shadow: 4px 8px 14px 5px #2c2929;
+}
+#h04{
+    background-color: #fc1313;
+    padding: 12px;
+    width: 12.4vw;
+    border-radius: 35px;
+    color: white;
+    margin-left: 7.5vw;
+    font-size: 1.5vw;
+}
+#h05{
+    background-color: #fc1313;
+    padding: 12px;
+    width: 14.4vw;
+    border-radius: 35px;
+    color: white;
+    margin-left: 6vw;
+    font-size: 1.5vw;
+}
+#h06{
+    background-color: #fc1313;
+    padding: 12px;
+    width: 9.5vw;
+    border-radius: 35px;
+    color: white;
+    margin-left: 24vw;
+    font-size: 1.5vw;
+}
+#td3 {
+    padding-left: 3vw;
+    font-size: 1.2vw;
+    text-align: left;
+    padding-bottom: 1vw;
+    padding-right: 1vw;
+}
