--- a/html/Web_Styling.css
+++ b/html/Web_Styling.css
@@ -550,3 +550,11 @@ th{
     padding-bottom: 1vw;
     padding-right: 1vw;
 }
+.display-table2{
+    border:10px;
+    width:40vw;
+    border-collapse: collapse;
+    padding: 4px;
+    border-color: rgb(255, 49, 49);
+    margin-bottom: 20px; 
+}
