--- a/html/Web_Styling.css
+++ b/html/Web_Styling.css
@@ -598,3 +598,10 @@ th{
     border-color: rgb(255, 49, 49);
     margin-bottom: 20px; 
 }
+#td4{
+    font-size: 1.2vw;
+    padding-bottom: 1vw;
+    padding-right: 1vw;
+    text-align: left;
+    padding-left: 2vw;
+}
