--- a/html/Web_Styling.css
+++ b/html/Web_Styling.css
@@ -359,7 +359,6 @@ tr {
 }
 
 input[type=text], input[type=password], input[type=date] {
-    width: 100%;
     height: 40px;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -614,10 +613,60 @@ th{
     padding-left: 2vw;
 }
 
-.hide{
-    display: none;
+textarea{
+    width: 100%;
+    height: 5vw;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin-bottom: 1.3vw;
+    resize: none;
+    background: #f1f1f1;
+    box-shadow: 0px 0px 30px -8px #2c2929;     
 }
 
-.unhide{
-    display: block;
+.registerbtn3{
+    background-color: rgb(255, 49, 49);
+    color: white;
+    padding: 16px 20px;
+    margin: 8px 0;
+    margin-left: 15vw;
+    border: none;
+    cursor: pointer;
+    border-radius: 16px;
+    width: 50%;
+    transition: 0.4s;
+    opacity: 0.9;
+}
+
+.registerbtn3:hover{
+    background-color: rgb(248, 6, 6);
+}
+#d07 {
+    color: white;
+    width: 60vw;
+    border: 7px solid;
+    border-color: #f73535;
+    background-color: #8f8f8f;
+    padding: 1px;
+    margin: 20 auto;
+    border-radius: 16px;
+    box-shadow: 4px 8px 14px 5px #2c2929;
+}
+#td8{
+    font-size: 1.2vw;
+    padding-bottom: 1vw;
+    padding-right: 1vw;
+    padding-left: 2vw;
+}
+
+#h09{
+    background-color: #fc1313;
+    padding: 10px;
+    width: 10vw;
+    border-radius: 30px;
+    margin-bottom: 10px;
+    color: white;
+    margin-left: 40%;
+    font-size: 1.2vw;
 }
